# sve-ntt

./: .editorconfig  CMakeLists.txt  CONTRIBUTING.md  README.md
.devcontainer/aarch64-cross/: .dockerignore  Dockerfile  apt-add-arm64-repository.bash  devcontainer.json
.devcontainer/aarch64-native/: Dockerfile
.github/workflows/: test.yml
examples/: CMakeLists.txt
examples/magic-series/: CMakeLists.txt  gaussian-polynomial.hpp  restricted-partition.hpp  test-magic-series.cpp
examples/magic-series-kinnaes/: CMakeLists.txt  generate-parameters.py  kinnaes.hpp  test-magic-series-kinnaes.cpp
include/: CMakeLists.txt
include/sventt/: modulus.hpp  sventt.hpp  utility.hpp  vector.hpp  wrapper.hpp
include/sventt/common/: sve.hpp
include/sventt/copy/sve/: generic.hpp
include/sventt/kernel/: iterative.hpp  recursive.hpp
include/sventt/layer/scalar/: generic.hpp  radix-eight.hpp  radix-four.hpp  radix-two.hpp
include/sventt/layer/sve/: blocked-generic.hpp  generic.hpp  radix-eight.hpp  radix-four.hpp  radix-two.hpp
include/sventt/modmul/scalar/: fixed-point-64.hpp  p-adic-64.hpp
include/sventt/modmul/sve/: fixed-point-64.hpp  p-adic-64.hpp
include/sventt/transposition/sve/: common.hpp  gather-immediate-index-column-first.hpp  gather-immediate-index-row-first.hpp  gather-vector-index-column-first.hpp  gather-vector-index-row-first.hpp  in-register-explicit-blocking-row-first.hpp  in-register-full-blocking-row-first.hpp  in-register-row-first.hpp  in-register.hpp
tests/: CMakeLists.txt  bench-ntt.cpp  bench-stream-cmg.cpp  bench-transpose.cpp  ntt-reference.hpp  test-modulus.cpp  test-ntt-reference.cpp  utility.hpp
tests/ntt-tests/: iterative-scalar-radix2-two10.hpp  iterative-scalar-radix2-two5.hpp  iterative-scalar-radix24-two11.hpp  iterative-scalar-radix248-two13.hpp  iterative-scalar-radix4-two10.hpp  iterative-scalar-radix8-two12.hpp  iterative-sve-radix2-two10.hpp  iterative-sve-radix4-two12.hpp  iterative-sve-radix8-two12.hpp  recursive-scalar-fourstep-two13.hpp  recursive-scalar-radix2-two5.hpp  recursive-scalar-radix24-two11.hpp  recursive-scalar-radix248-two13.hpp  recursive-sve-fourstep-two13.hpp  recursive-sve-radix248-two13.hpp
